# double-pendulum-lab

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml  python.yml
python/: conftest.py  pyproject.toml
python/double_pendulum/: __init__.py  angles.py  equations.py  forcing.py  integrator.py  presets.py  seeded_random.py  simulation.py  types.py
python/golden/: golden.json
python/parity/: generate.py
python/tests/: test_angles.py  test_forcing.py  test_physics.py
src/: App.tsx  styles.css  types.ts
src/__tests__/: angles.test.ts  export.test.ts  forcing.test.ts  parity.test.ts  physics.test.ts
src/components/: Charts.tsx  Controls.tsx  EducationPanel.tsx  EnergyReadout.tsx  PendulumCanvas.tsx  Toolbar.tsx
src/hooks/: useSimulation.ts
src/physics/: angles.ts  equations.ts  forcing.ts  integrator.ts  presets.ts  simulation.ts
src/utils/: export.ts  seededRandom.ts  validation.ts
